fixed an issue of inputDate: when an inputDate is working with a panelFormLayout, the inputDate will be rendered as a <tr>, "display: inline-block" style property causes table layout problem. removed the property.

--- a/ViewController/src/main/public_html/skins/altaworkarounds/altaworkarounds-v1-desktop.css
+++ b/ViewController/src/main/public_html/skins/altaworkarounds/altaworkarounds-v1-desktop.css
@@ -329,10 +329,6 @@ af|selectOneRadio .AFPanelFormLayoutContentCell {
  * Start of inputDate
  */
 
-af|inputDate {
-    display: inline-block;
-}
-
 /*
  * Alter the default box model from content-box to border-box in order to make a room 
  * with a padding-right to allow an icon appear inside the input control.
